Bug 51599 - UI Conditional Formatting: last condition input truncated at bottom
Summary: UI Conditional Formatting: last condition input truncated at bottom
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta3
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-30 09:32 UTC by Rainer Bielefeld Retired
Modified: 2012-07-05 07:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (996.30 KB, image/png)
2012-06-30 09:32 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-06-30 09:32:59 UTC
Created attachment 63645 [details]
Screenshot

Steps how to reproduce with Server Installation of  "LibreOffice 3.6.0.0.beta2  German UI/Locale [Build-ID: f010139] on German WIN7 Home Premium (64bit) :

1. open new Spreadsheet from LibO Start Center
2. Click B2
3. Add several conditions (6 or so)
   Expected: after <Add> all new conditions are visible
   Actual: even if you move scroll slider in Conditions dialog completely
           down, the last condition will be truncated at it's bottom

Additional, might be related effect: scroll slider completely up after Step 6 will show a blank area above the first condition, scrolls too far.

This is related to the new Conditions dialog, so not a regression.

This one might be related to "Bug 51587 - UI: Conditional formatting : Current condition not displayed after Add"
Comment 1 Not Assigned 2012-06-30 10:15:12 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74f46aaa4b9ecffc8d20b0d22bb36625eeb4391d

correctly calculate scroll bar position, related fdo#51599
Comment 2 Markus Mohrhard 2012-06-30 10:16:52 UTC
Only fixed the problem that the zero position was not correct, still have no idea how to scroll in the code. All my ideas did not work.
Comment 3 Not Assigned 2012-06-30 10:25:03 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62b4026212d2f5e4ee26acf70b09b7e8f2eb6e63&g=libreoffice-3-6

correctly calculate scroll bar position, related fdo#51599


It will be available in LibreOffice 3.6.