correctly calculate scroll bar position, related fdo#51599

Change-Id: I9e44e82873e99f3063c4ed9dff83613b53327872